# pdf-merger-rust

./: .gitignore  AGENTS.md  Cargo.toml  ENHANCED-VERSION-PLAN.md  README-Windows.md  README.md  RUST-TUTORIAL.md  TESTING.md  build-windows.bat  build-windows.ps1  check_cli.py  content_check.py  detailed_check.py  quick_check.py  test1.txt  test2.txt  verify_merged.py
.cargo-target/: .rustc_info.json
.cargo-target/debug/.fingerprint/bitflags-4d8c29079b7f2039/: output-lib-bitflags
.cargo-target/debug/.fingerprint/cfg-if-b2fae9762dd914dd/: output-lib-cfg_if
.cargo-target/debug/.fingerprint/libc-db44a11d4af814db/: build-script-build-script-build  build-script-build-script-build.json
.cargo-target/debug/.fingerprint/proc-macro2-45ab644921c07854/: build-script-build-script-build  build-script-build-script-build.json
.cargo-target/debug/.fingerprint/proc-macro2-94b747b380dda578/: run-build-script-build-script-build  run-build-script-build-script-build.json
.cargo-target/debug/.fingerprint/quote-43af53805903a4de/: run-build-script-build-script-build  run-build-script-build-script-build.json
.cargo-target/debug/.fingerprint/quote-ac667f50521aed49/: build-script-build-script-build  build-script-build-script-build.json
.cargo-target/debug/.fingerprint/unicode-ident-3c2fd7f55134ed81/: output-lib-unicode_ident
src/: cli.rs  lib.rs  main.rs
tests/: cli_args.rs  cli_regression.rs  merge_empty_pdf.rs  merge_regression.rs  validation_test.rs
